--- a/public/style.css
+++ b/public/style.css
@@ -68,3 +68,11 @@ label{
 color:#F0F7FA;
 font-size: 1.3vw;
  }
+ #emailupload{
+  padding:4%;
+
+}
+#writeemail{
+ position:relative;
+    width:50%;
+  }
