--- a/public/style.css
+++ b/public/style.css
@@ -21,7 +21,7 @@ body {
   color: #ffffff;
   background-color: #F89406;
   border: none;
-   margin-top:10%;
+   margin-top:7%;
    width:27%;
    height:4%;
    border-radius:5%;
@@ -62,6 +62,7 @@ h4 {
 select{
 	margin: auto;
 	margin-bottom: 2.2vw;
+	margin-top: 10px;
 }
 
 label{
@@ -72,7 +73,13 @@ font-size: 1.3vw;
   padding:4%;
 
 }
-#writeemail{
+#email{
  position:relative;
     width:50%;
   }
+#emailwords{
+  font-size:1.1vw;
+}
+#tandc{
+  font-size:1.3vw;
+}
