--- a/public/style.css
+++ b/public/style.css
@@ -25,8 +25,9 @@ body {
    width:30%;
    height:7%;
    border-radius:10px;
-   font-size:1vw;
+   font-size:1.2vw;
    font-weight: bold;
+    margin-bottom: -17%;
  }
 #upload-btn:hover,
 #upload-btn:focus,
@@ -66,6 +67,7 @@ h4 {
     border-radius: 40px;
     margin: auto;
     padding-bottom: 15px;
+        margin-top: 2%;
   }
 select{
 	margin: auto;
@@ -137,6 +139,8 @@ font-size: 1.3vw;
   background-color:#BF6A0A;
 }
 #filereceived{
+  margin-top: -33%;
+    margin-bottom: 16%;
 }
 .visible {
   visibility: visible;
@@ -154,4 +158,7 @@ font-size: 1.3vw;
   transition: margin-top 0s 2s;
 }
 
-
+div#bottomdiv {
+   margin-top: 35%;
+    margin-bottom: 17%;
+}
